syntax = "proto3";

package message;

service VerifyService {
  rpc GetVerifyCode (VerifyRequst) returns (VerifyResponse) {}
}

message VerifyRequst {
  string email = 1;
}

message VerifyResponse {
  int32 error = 1;
  string email = 2;
  string code = 3;
}